# ix

./: .gitignore  ABOUT.md  AGENTS.md  ART_OF_README.md  BUGFIX_TASK.md  Cargo.toml  DAEMON_TASK.md  DESIGN.md  DESIGN_STREAMING.md  LICENSE  LLM_FLAGS_TASK.md  README-AGENTIC.md  README.md  SPARSE_TABLE_TASK.md  git_guidelines_for_LLM.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
.github/workflows/: build.yml  release.yml  stale.yml
benches/: search.rs
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
skills/: generate_index.py  skills_index.json
skills/ach-debugger/: SKILL.md
skills/advanced-debugging/: SKILL.md
skills/advanced-debugging/references/: condition-based-waiting.md  defense-in-depth.md  llm-failure-modes.md  root-cause-tracing.md  tools-and-techniques.md
skills/advanced-design/: SKILL.md
skills/advanced-design/references/: architecture-patterns.md  contract-design.md  decision-records.md  design-failure-modes.md  planning-discipline.md
skills/charlie-gastown/: SKILL.md
skills/charlie-gastown/references/: aop-v3.md  dispatch.md
skills/charlie-prompt-engineering/: SKILL.md
skills/elegantify/: SKILL.md
skills/elegantify/references/: elegance-patterns.md
skills/gastown/: SKILL.md
skills/gastown/references/: formulas.md  openclaw-models.md  workspace-patterns.md
skills/github-template-scaffolder/: SKILL.md
skills/hive-mind/: SKILL.md
skills/linux-shell-scripting/: SKILL.md
skills/llm-guardrails/: SKILL.md
skills/llm-guardrails/references/: cwe-patterns.md  guardrail-rules.md  model-profiles.md  prompt-construction.md
skills/llm-patch-guardrails/: SKILL.md
skills/llm-testing-patterns/: SKILL.md
skills/llm-testing-patterns/references/: failure-modes.md  integration-patterns.md  test-templates.md
skills/morph-editor/: SKILL.md
skills/prompt-engineering-patterns/: SKILL.md
skills/python-ui-design/: SKILL.md
skills/python-ui-design/references/: customtkinter-guide.md  textual-guide.md  tkinter-patterns.md  ttkbootstrap-guide.md
skills/ralph-loop/: SKILL.md
skills/seshat/: SKILL.md
skills/seshat/references/: patterns.md  philosophy.md
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: activation.md  content-patterns.md  hooks.md
skills/tui-design/: SKILL.md
skills/tui-design/references/: chat-patterns.md  ratatui-patterns.md  state-machines.md
skills/using-superpowers/: SKILL.md
skills/wd40/: SKILL.md
src/lib/: archive.rs  bloom.rs  builder.rs  config.rs  decompress.rs  error.rs  executor.rs  format.rs  idle.rs  lib.rs  planner.rs  posting.rs  reader.rs  scanner.rs  string_pool.rs  trigram.rs  varint.rs  watcher.rs
tests/: fault_injection.rs  integration.rs  robustness.rs  streaming.rs
