[package]
name = "ix"
version = "0.1.0"
edition = "2024"
description = "Trigram code search — the grep replacement"
license = "MIT"
repository = "https://github.com/moesw/ix"
readme = "README.md"
keywords = ["search", "grep", "trigram", "code", "index"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[[bin]]
name = "ix"
path = "src/bin/ix.rs"

[[bin]]
name = "ixd"
path = "src/bin/ixd.rs"

[lib]
name = "ix"
path = "src/lib/lib.rs"

[dependencies]
memmap2 = "0.9"
crc32c = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1"
regex-syntax = "0.8"
ignore = "0.4"           # .gitignore support (same as ripgrep)
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
crossbeam-channel = "0.5"
notify = "7"             # file watcher (inotify/kqueue/ReadDirectoryChanges)
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "search"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
