[package]
name = "moeix"
version = "0.2.2"
edition = "2024"
description = "High-performance trigram code search for humans and AI agents."
license = "MIT"
repository = "https://github.com/moeshawky/ix"
readme = "README.md"
keywords = ["search", "grep", "trigram", "code", "index"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[workspace]
members = ["."]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (checked by infra)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each release
installers = ["shell", "powershell"]
# Target platforms to build binaries for (multi-platform support)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater binary
install-updater = true
# Repository to release to
repository = "https://github.com/moeshawky/ix"

[[bin]]
name = "ix"
path = "src/bin/ix.rs"

[[bin]]
name = "ixd"
path = "src/bin/ixd.rs"
required-features = ["notify"]

[lib]
name = "ix"
path = "src/lib/lib.rs"

[features]
default = ["notify"]
notify = ["dep:notify"]
decompress = ["flate2", "zstd", "bzip2", "xz2"]
archive = ["zip", "tar"]
full = ["decompress", "notify", "archive"]

[dependencies]
memmap2 = "0.9"
crc32c = "0.6"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
regex = "1"
regex-syntax = "0.8"
ignore = "0.4"           # .gitignore support (same as ripgrep)
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
crossbeam-channel = "0.5"
notify = { version = "7", optional = true }             # file watcher (inotify/kqueue/ReadDirectoryChanges)
ctrlc = "3.4"
nix = { version = "0.29", features = ["process", "signal"] }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1"
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
bzip2 = { version = "0.5", optional = true }
xz2 = { version = "0.1", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }
tar = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "search"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
